20.2 port: Down to 18 errors on the main source set